<resources>
    <string name="app_name">Password Generator</string>
    <string name="location">Enter recourse name:</string>
    <string name="key_word">Enter key word:</string>
    <string name="your_password">Your password:</string>
    <string name="generate">Generate!</string>
    <string name="select_password_length">Select password length:</string>
    <string name="password_was_copied"> Password was copied </string>
    <string name="help">Help</string>
    <string name="password_complexity">More strong password</string>
    <string name="password_generation_model">New generation model</string>
    <string name="hide_user_data">Hide user data after generation</string>
    <string name="settings">Settings</string>

    <string name="help_text_0">You no longer need to remember a lot of passwords for different sites!</string>

    <string name="help_text_1">You no longer need to remember a lot of passwords for different sites!Now it has become
it is possible to make the process of creating passwords very simple. To get started, you can visit the settings section. Here you can ask
the length of your new password. And there is also a switch for using a more complex password. When the option is selected
use a more complex password, use a larger number of characters and characters. It is recommended to disable this feature
only if the service imposes special requirements for the use of characters in the password and does not allow you to set the generated password.</string>

    <string name="help_text_2">Then, in the main window, enter the word, several, in the upper field of the application
words or a number that you associate with the resource for which you need to choose a password, for example, "Mailbox". And in the lower field you need to enter
a keyword that can be the same for all your passwords. For example, "password". After that, click the "GENERATE" button and the application using
a special algorithm will generate a complex password from large and small English letters, as well as from special characters.
At the same time, it will not need to be rewritten manually - it will be copied to
clipboard and you will only have to paste it into the necessary field for registration or logging in to your account.</string>

    <string name="help_text_3">The main feature is that every time you enter a combination of the resource name (or words
which is associated with this resource) and the keyword, then you will receive the same complex password.
At the same time, the application does not remember or store your passwords!</string>
</resources>